# mcp-server-sqlfluff

./: .gitignore  .talismanrc  CONTRIBUTION.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/mcp_server_sqlfluff/: server.py  tools.py
src/mcp_sqlfluff/: server.py  tools.py
tests/: test_tools.py
