[project]
name = "mcp-server-sqlfluff"
version = "0.1.0"
requires-python = ">=3.11"
description = "MCP Server for SQLFluff"
readme = "README.md"
authors = [
    { name = "Antony Prince J", email = "antoprince001@gmail.com" }
]
dependencies = [
    "sqlfluff>=3.4.0",
    "mcp>=1.9.1",
    "pydantic==2.11.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_sqlfluff"]

[project.scripts]
mcp-server-sqlfluff = "mcp_server_sqlfluff:main"

[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "I"]
lint.ignore = ["E501"]
fix = true
lint.unfixable = ["F401", "F841"]
force-exclude = true

[tool.ruff.lint.isort]
combine-as-imports = true

